--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
@@ -10,9 +10,44 @@
     >
     <ScrollView Padding="{StaticResource NormalPageMargin}">
         <VerticalStackLayout Spacing="8">
+            <Border Style="{StaticResource Card}" 
+                    Grid.Row="0" 
+                    Margin="{StaticResource NormalPageMargin}">
+                <Grid x:Name="GridLayout" 
+                        HorizontalOptions="FillAndExpand"
+                        Style="{StaticResource CardLayout}">
 
-            <views:AboutControl />
-            
+                    <VerticalStackLayout Spacing="8" x:Name="AboutLayout">
+                        <Label Text="{Binding VersionString}" Style="{StaticResource SubtitleTextBlockStyle}" />
+
+                        <Label Text="{x:Static r:Strings.Settings_Description}" />
+
+                        <Button Clicked="ButtonAbout_Clicked" 
+                                Style="{StaticResource HyperlinkButton}"
+                                Text="{x:Static r:Strings.Settings_Open_About}" />
+
+                        <Label Text="{x:Static r:Strings.Settings_Credits_Title}" Style="{StaticResource Subtitle2TextBlockStyle}" />
+                        <Label Text="{x:Static r:Strings.Settings_Credits_Line1}" />
+                        <Label Text="{x:Static r:Strings.Settings_Credits_Line2}" />
+                        <Label Text="{x:Static r:Strings.Settings_Credits_Line3}" />
+                        <Label Text="{x:Static r:Strings.Settings_Credits_Line4}" />
+
+                        <Label Text="{x:Static r:Strings.Settings_Header_Email}" Style="{StaticResource Subtitle2TextBlockStyle}" />
+                        <Label Text="{x:Static r:Strings.Settings_Email_Note}" />
+                        <Button Command="{Binding EmailCommand}"
+                            Style="{StaticResource HyperlinkButton}"
+                            Text="{x:Static r:Strings.General_Pekspro_EmailAddress}"
+                            />
+
+                        <Label Text="{x:Static r:Strings.Settings_Header_Webbpage}" Style="{StaticResource Subtitle2TextBlockStyle}" />
+                        <Button Command="{Binding OpenWebPageCommand}"
+                            Style="{StaticResource HyperlinkButton}"
+                            Text="{x:Static r:Strings.General_Pekspro_Url}"
+                            />
+                    </VerticalStackLayout>
+                </Grid>
+            </Border>
+
             <Rectangle Style="{StaticResource Separator}" />
 
             <views:GraphControl />
@@ -81,9 +116,6 @@
             <Rectangle Style="{StaticResource Separator}" />
             
             <views:DownloadSettingsControl />
-
-            <views:DebugSettingsControl x:Name="DebugSettings" />
-            
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
