--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
@@ -32,7 +32,7 @@
                         <Label Text="{x:Static r:Strings.Settings_Credits_Line3}" />
                         <Label Text="{x:Static r:Strings.Settings_Credits_Line4}" />
 
-                        <Label Text="{x:Static r:Strings.Settings_Header_Email}" Style="{StaticResource Subtitle2TextBlockStyle}" />
+                        <Label Text="{x:Static r:Strings.Settings_Header_Email}" Style="{StaticResource Subtitle2TextBlockStyle}" Margin="0,12,0,0" />
                         <Label Text="{x:Static r:Strings.Settings_Email_Note}" />
                         <Button Command="{Binding EmailCommand}"
                             Style="{StaticResource HyperlinkButton}"
